Updated the HouseholdInvitationService and tests to use the updated exceptions